--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   <!-- Footer -->
   <section id="footer">
     <div class="container-fluid gradient-background mb-0 pb-0">
-      <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
+      <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 mt-5 border-top">
         <div class="col mb-3">
           <p class="text-body-secondary">© TinDog</p>
         </div>
